# api/openapi.yaml
@@ -644,10 +644,6 @@ components:
           items:
             type: string
             pattern: "^[0-9a-v]{20}$"
-        newTheme:
-          type: string
-          description: Name of a new theme to create and associate with the action
-          example: "communication"
       required:
         - person_id
         - occurred_at
